--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,12 @@
 body {
-    background-color: rgb(25, 25, 201);
+    background-color: rgb(146, 121, 238);
+}
+.entrada{
+    width: 48px;
+    background-color: rgb(119, 161, 240);
+    border: none;
+    border-bottom: 2px solid #000;
+    text-align: right;
 }
 .calc_simples {
     background-color: rgb(0, 139, 127);
@@ -9,10 +16,7 @@ body {
 }
 .display_simples {
     width: 100%;
-    text-align: center;
-}
-#resultado {
-    text-align: right;
+    text-align: center
 }
 .teclas {
     text-align: center;
